.travis.yml 파일에 API key 변수 추가

--- a/backend/.travis.yml
+++ b/backend/.travis.yml
@@ -31,3 +31,6 @@ after_success:
    bucket_path: "docker-fullstak-app"
    on:
        branch: main
+
+access_key_id: $AWS_ACCESS_KEY
+secret_access_key: $AWS_SECRET_ACCESS_KEY
